@@ -7,6 +7,8 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=17123).
   * Modify the configure script check for the webp delegate library (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23025).
+  * The -blur, -guassian-blur, and -sharpen are now convenience methods
+    for -morphology convolve.
 
 2013-03-18  6.8.3-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.3-10, SVN revision 11413.
